Replace repository with updated FIPS installation files